welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: not found: value vuBiscuit
		if (vuBiscuit){
                    ^