welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
		avance();avance();avance();avance();avance();avance();
		if (vuBiscuit){
			return true;
		}else{
			return false;
		}
	}
	



